@@ -6617,3 +6617,6 @@ PACKAGE: 2.2.99.2
  * Added check for whether the subjects field is configured in MODS (METS)
     export
 
+2008-01-15 tdb
+ * Check whether an executable is set as "NOTFOUND", fixing #2874
+
